--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			font-size: 35px;
 			color: rgb(209, 74, 180);
 			text-align: center
-			}
+		}
 
 		.two {
 			width: 580px;
@@ -50,7 +50,7 @@
 
 	<div class="one">
 		<h2>药学測試網站</h2>
-		
+
 		<div class="two">
 			<p class="liejing">“列净”使用知多少</p>
 			<p>近年来“列净”类降糖药物被广泛用于2型糖尿病患者的降糖治疗，目前我国临床可使用的包括卡格列净、达格列净、恩格列净、艾托格列净以及恒格列净。
@@ -72,7 +72,7 @@
 				同时，由于尿糖排泄可能诱发泌尿道感染，足量饮水也能够降低感染风险（删除“，用药期间患者也应注意泌尿系统卫生，避免感染发生。”）。
 				所以，更推荐晨起服药，在保障药效的同时还能够降低泌尿道不良反应的发生。
 			</p>
-
+			<p>uuu</p>
 		</div>
 	</div>
 </body>
