--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				同时，由于尿糖排泄可能诱发泌尿道感染，足量饮水也能够降低感染风险（删除“，用药期间患者也应注意泌尿系统卫生，避免感染发生。”）。
 				所以，更推荐晨起服药，在保障药效的同时还能够降低泌尿道不良反应的发生。
 			</p>
-			<p>恩格列净</p>
+			<p>uuu</p>
 		</div>
 	</div>
 </body>
