--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>达格列净</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
+	<title>测试网站</title>
 	<style>
 		img {
 			width: 150px;
