--- a/index.html
+++ b/index.html
@@ -3,98 +3,16 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
 	<title>测试网站</title>
 	<style>
-		img {
-			width: 150px;
-			position: absolute;
-			left: 25%;
-			top: 15%;
-		}
-
-		span {
-			color: rgb(51, 83, 210);
-		}
-
-		p {
-			text-indent: 30px;
-		}
-
-		h2 {
-			margin: auto;
-			width: 400px;
-			font-size: 35px;
-			color: rgb(209, 74, 180);
-			text-align: center
-		}
-
-		.two {
-			width: 580px;
-			height: 150px;
-			position: absolute;
-			left: 40%;
-			top: 15%;
-		}
-
-		.liejing {
-			color: blueviolet;
-			font-size: 30px;
-			text-align: center;
-			text-indent: 0%;
-		}
+		
 	</style>
 </head>
 
 <body>
-
-	<div class="one">
-		<h2>药学測試網站</h2>
-
-		<div class="two">
-			<p class="liejing">“列净”使用知多少</p>
-			<p>近年来“列净”类降糖药物被广泛用于2型糖尿病患者的降糖治疗，目前我国临床可使用的包括卡格列净、达格列净、恩格列净、艾托格列净以及恒格列净。
-				该类药物属钠-葡萄糖协同转运蛋白2抑制剂（SGLT-2i），通过抑制表达于近端肾小管处的SGLT-2，减少肾脏葡萄糖的重吸收，促进尿糖排出体外，以发挥降糖作用。
-				那么糖尿病患者在使用“列净”类药物时有哪些方面需要注意？今天就让我们一起来了解一下。
-			</p>
-			<span>一、适应症方面</span>
-			<br>
-			<p>目前该类药物仅限于2 型糖尿病患者的治疗，用于改善血糖控制，不能够作为1型糖尿病患者以及酮症酸中患者的药物治疗，
-				对一些超重、肥胖的患者也具有减重方面的获益。
-			</p>
-			<span>二、服药时间方面</span>
-			<p>
-				以前我们所使用的降糖药物多通过促进体内葡萄糖的利用降低血糖，而“列净”类药物的作用机制不同于既往药物。
-				其在促进尿糖排泄的同时，也会引起排尿次数的增加，患者应避免睡前用药，以防止夜尿增多，进而影响睡眠。
-			</p>
-			<p>
-				正常人白天的饮水量是多于夜间的，晨起服药不仅能够保证用药后充足的液体摄入，有助于药效的正常发挥。
-				同时，由于尿糖排泄可能诱发泌尿道感染，足量饮水也能够降低感染风险（删除“，用药期间患者也应注意泌尿系统卫生，避免感染发生。”）。
-				所以，更推荐晨起服药，在保障药效的同时还能够降低泌尿道不良反应的发生。
-			</p>
-			<span>三、不良反应方面</span>
-			<p>
-				1.低血糖：该类药物单独使用低血糖风险较小，若联合其他降糖药物可增加低血糖风险，患者日常用药期间应随身携带糖块，
-				一旦出现心悸、大汗、饥饿等低血糖表现立即服食解救。此外，当联合使用阿卡波糖、伏格列波糖时，不宜使用饼干等碳水类食物解救低血糖，
-				因效果不佳，容易贻误病情。
-			</p>
-			<p>
-				2.血容量不足：该类药物可降低血容量导致体位性低血压发生，所以在患者改变体位时，如由躺卧位起身，应缓慢进行，
-				以免出现头晕、站立不稳等情况造成跌倒事件发生。用药期间注意血糖、血压的监测。
-			</p>
-			<p>
-				3.肾损伤：糖尿病伴肾损害的患者在血容量不足的情况下，更容易出现低血压，
-				同时，急性肾损伤风险也会增加，所以中重度肾病的患者一定要在专业医师评估后再行用药。
-			</p>
-			<p>
-				4.泌尿系统感染：该药可能造成尿路感染、生殖器真菌感染，甚至导致会阴坏死性筋膜炎这种罕见的严重不良反应。
-				用药期间患者一旦出现排尿不适、生殖器疼痛及肿胀或出现发热等症状应及时就医，日常也应该注意泌尿系统卫生，避免感染发生。
-			</p>
-			<p>
-				总之，糖尿病是一类慢性疾病，在治疗过程中需要患者的积极参与，提高用药的依从性，
-				只有严格的遵医嘱定时定量服药才能够更好的维持血糖稳定，这对于延缓并发症的发生、发展是至关重要的。
-			</p>
-		</div>
+	<div class="zhengwen">
+		<img src="1.jpg" alt="">
 	</div>
 </body>
 
