--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
 	<title>测试网站</title>
 	<style>
-		
+		img{
+			width: 1200px;
+		}
 	</style>
 </head>
 
 <body>
 	<div class="zhengwen">
-		<img src="1.jpg" alt="1">
+		<img src="1.png" alt="1">
 	</div>
 </body>
 
