--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=yes">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
 	<title>测试网站</title>
 	<style>
-		img{
-			width: 1200px;
+		div{
+			width: auto;
 		}
 	</style>
 </head>
 
 <body>
 	<div class="zhengwen">
-		<img src="1.png" alt="1">
+		第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
+		第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
 	</div>
 </body>
 
