--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
 	<title>测试网站</title>
 	<style>
-		div{
+		div {
 			margin: 10%;
 			width: auto;
+			text-indent: 30px;
 		}
 	</style>
 </head>
 
 <body>
 	<div class="zhengwen">
-		第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
-		第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
+		<p>第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
+			第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
+			第一个网站第一个网站第一个网站
+		</p>
 	</div>
 </body>
 
