--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 			width: auto;
 			text-indent: 30px;
 		}
+		embed{
+			position:relative;
+			left: 210px;
+			width: 800px;
+			height: 400px;
+		}
 	</style>
 </head>
 
 <body>
 	<div class="zhengwen">
-		<video src="D:\OneDrive\桌面\科普\科普视频\二甲双胍\abf7f91e1f5ad4a85232e2d65046a58b.mp4" controls="controls"></video>
+		<img src="1.png" alt="">
+		<embed src="D:\OneDrive\桌面\科普\科普视频\复方甘草片\复方甘草片科普视频.mp4" controls="controls">
+		</embed>
 		<p>第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
 			第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
 			第一个网站第一个网站第一个网站
