--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<div class="zhengwen">
 		<img src="1.png" alt="">
-		<embed src="D:\OneDrive\桌面\科普\科普视频\复方甘草片\复方甘草片科普视频.mp4" controls="controls">
+		<embed src="科普/激素.mp4" controls="controls">
 		</embed>
 		<p>第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
 			第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
