--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <body>
 	<div class="zhengwen">
-		<img src="1.png" alt="">
-		<embed src="科普/激素.mp4" controls="controls">
+		
+		<embed src="激素.mp4" controls="controls">
 		</embed>
 		<p>第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
 			第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
