--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		embed{
 			position:relative;
 			left: 210px;
-			width: 800px;
-			height: 400px;
+			width：auto;
+			
 		}
 	</style>
 </head>
