--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 			text-indent: 30px;
 		}
 		embed{
-			position:relative;
-			left: 210px;
-			width：auto;
-			
+			margin:10%
+			width:auto
 		}
 	</style>
 </head>
