--- a/index.html
+++ b/index.html
@@ -6,23 +6,34 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
 	<title>测试网站</title>
 	<style>
-		div {
+		.zhengwen {
 			margin: 10%;
 			width: auto;
 			text-indent: 30px;
 		}
-		embed{
-			margin:10%
-			width:auto
+
+		.shipin {
+			position: relative;
+			padding-bottom: 56.25;
+			height: 0;
+		}
+
+		.shipin embed {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
 		}
 	</style>
 </head>
 
 <body>
-	<div class="zhengwen">
-		
+	<div class="shipin">
 		<embed src="激素.mp4" controls="controls">
 		</embed>
+	</div>
+	<div class="zhengwen">
 		<p>第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
 			第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
 			第一个网站第一个网站第一个网站
