--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
 		}
 
 		.shipin {
+			overflow: hidden;
+			padding-bottom: 56.25%;
 			position: relative;
-			padding-bottom: 56.25;
 			height: 0;
 		}
 
-		.shipin embed {
-			position: absolute;
+		.shipin video {
 			top: 0;
 			left: 0;
 			width: 100%;
 			height: 100%;
+			position: absolute;
 		}
 	</style>
 </head>
 
 <body>
 	<div class="shipin">
-		<embed src="激素.mp4" controls="controls">
-		</embed>
+		<video src="激素.mp4" controls="controls">
+		</video>
 	</div>
+
 	<div class="zhengwen">
 		<p>第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
 			第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
