--- a/index.html
+++ b/index.html
@@ -6,40 +6,84 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
 	<title>测试网站</title>
 	<style>
+		.biaoti {
+			font-size: 30px;
+			color: rgb(58, 161, 202);
+			text-align: center;
+			margin-bottom: 5%;
+		}
+
+		.xiaobiaoti {
+			text-align: center;
+			font-size: 20px;
+			color: rgb(166, 65, 186);
+		}
+
 		.zhengwen {
-			margin: 10%;
+			margin-left: 10%;
+			margin-right: 10%;
+			margin-top: 5%;
 			width: auto;
 			text-indent: 30px;
+			line-height: 200%;
 		}
 
-		.shipin {
-			overflow: hidden;
-			padding-bottom: 56.25%;
-			position: relative;
-			height: 0;
+		@media screen and (max-width:768px) {
+			.shipin {
+				overflow: hidden;
+				padding-bottom: 56.25%;
+				position: relative;
+				height: 0;
+			}
+
+			.shipin video {
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				position: absolute;
+			}
 		}
 
-		.shipin video {
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			position: absolute;
+		@media screen and (min-width:768px) and(max-width:996px) {
+			.shipin {}
+		}
+
+		@media screen and (min-width:996px) {
+			.shipin {
+				text-align: center;
+			}
+
+			.shipin video {
+				width: 50%;
+				padding: 0%;
+			}
 		}
 	</style>
 </head>
 
 <body>
-	<div class="shipin">
-		<video src="激素.mp4" controls="controls">
-		</video>
+	<div class="biaoti">
+		药学测试网站
+		<hr>
+	</div>
+	<div class="xiaobiaoti">
+		<span>
+			糖皮质激素用药科普
+		</span>
 	</div>
 
 	<div class="zhengwen">
-		<p>第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
-			第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站第一个网站
-			第一个网站第一个网站第一个网站
+
+		<p>
+			在我们日常的工作生活中会遇到很多患者，他们往往一提到激素就不愿意使用，
+			这或许是由于这类药物诸多广为人知的不良反应让大家对它产生了根深蒂固的负面印象。
+			如今，随着这种印象的日益加深，人们对激素的误解也逐渐的加大，那么今天就让我们来一起了解一下这让人“望而却步”的激素吧。
 		</p>
+	</div>
+	<div class="shipin">
+		<video src="激素.mp4" controls="controls">
+		</video>
 	</div>
 </body>
 
