--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
 		}
 
 		.zhengwen {
-			margin-left: 10%;
-			margin-right: 10%;
+			margin-left: 5%;
+			margin-right: 5%;
 			margin-top: 5%;
 			width: auto;
 			text-indent: 30px;
 			line-height: 200%;
 		}
+
+		
 
 		@media screen and (max-width:768px) {
 			.shipin {
@@ -46,7 +48,7 @@
 		}
 
 		@media screen and (min-width:768px) and(max-width:996px) {
-			.shipin {}
+			
 		}
 
 		@media screen and (min-width:996px) {
@@ -64,7 +66,7 @@
 
 <body>
 	<div class="biaoti">
-		药学测试网站
+		测试网站
 		<hr>
 	</div>
 	<div class="xiaobiaoti">
@@ -82,7 +84,10 @@
 		</p>
 	</div>
 	<div class="shipin">
-		<video src="激素.mp4" controls="controls">
+		<video controls="controls" poster="" webkit-playsinline="true" playsinline="true">
+			<source src="激素.mp4" type="video/mp4">
+			<source src="激素.ogg" type="video/ogg">
+			<source src="激素.webm" type="video/webm">
 		</video>
 	</div>
 </body>
