--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 			line-height: 200%;
 		}
 
-		
+		.zhengwen p {
+			text-align: justify;
+		}
+
 
 		@media screen and (max-width:768px) {
 			.shipin {
@@ -47,9 +50,7 @@
 			}
 		}
 
-		@media screen and (min-width:768px) and(max-width:996px) {
-			
-		}
+		@media screen and (min-width:768px) and(max-width:996px) {}
 
 		@media screen and (min-width:996px) {
 			.shipin {
@@ -89,6 +90,9 @@
 			<source src="激素.ogg" type="video/ogg">
 			<source src="激素.webm" type="video/webm">
 		</video>
+	</div>
+	<div>
+
 	</div>
 </body>
 
