--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
 				margin: 3%;
 			}
 		}
+		img{
+			display: flex;
+			position: absolute;
+			top: 1.5%;
+			left: 55%;
+			width: 1.5%;
+			border-radius: 30%;
+		}
 	</style>
 </head>
 
@@ -170,6 +178,7 @@
 		</div>
 	</div>
 	<br>
+	<img src="3.png" alt="图片不能正常显示">
 </body>
 
 </html>
