--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		.content {
 			border: 1px solid rgb(163, 193, 226);
 			border-radius: 3%;
+			box-shadow:0px 10px 30px rgb(136, 136, 211);
 		}
 
 		.biaoti {
