--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			</p>
 		</div>
 		<div class="shipin">
-			<video controls="controls" poster="" webkit-playsinline="true" playsinline="true">
+			<video controls="controls" poster="待机.png" webkit-playsinline="true" playsinline="true" muted preload="metadata">
 				<source src="激素.mp4" type="video/mp4">
 				<source src="激素.ogg" type="video/ogg">
 				<source src="激素.webm" type="video/webm">
