--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		.content {
 			border: 1px solid rgb(163, 193, 226);
 			border-radius: 3%;
-			box-shadow:0px 10px 30px rgb(136, 136, 211);
+			box-shadow: 0px 10px 30px rgb(136, 136, 211);
 		}
 
 		.biaoti {
@@ -30,6 +30,34 @@
 			font-size: small;
 			text-align: right;
 			color: rgb(179, 218, 225);
+		}
+
+
+		.meihua {
+			background-color: rgb(122, 220, 248);
+			padding: 0%;
+			text-align: left;
+			text-indent: 10px;
+		}
+
+		.meihua span {
+			color: aliceblue;
+		}
+
+		.xuxian p {
+			margin-bottom: 0%;
+			padding-bottom: 0px;
+			padding-top: 0px;
+			color: rgb(47, 59, 233);
+			text-indent: 30px;
+			text-align: justify;
+		}
+
+		hr {
+			margin-top: 0px;
+			padding: 0px;
+			width: 310px;
+			border: 1px dashed rgb(101, 137, 236);
 		}
 
 		.zhengwen {
@@ -68,6 +96,7 @@
 				position: absolute;
 				margin: 1%;
 			}
+
 			img {
 				display: flex;
 				position: absolute;
@@ -77,7 +106,7 @@
 				border-radius: 30%;
 			}
 
-			
+
 		}
 
 		@media screen and (min-width:768px) and(max-width:996px) {}
@@ -91,6 +120,7 @@
 				width: 45%;
 				margin: 3%;
 			}
+
 			img {
 				display: flex;
 				position: absolute;
@@ -107,7 +137,7 @@
 
 	<div class="biaoti">
 		测试网站
-		
+
 		<hr>
 	</div>
 	<div class="content">
@@ -129,15 +159,25 @@
 				如今，随着这种印象的日益加深，人们对激素的误解也逐渐的加大，那么今天就让我们来一起了解一下这让人“望而却步”的激素吧。
 			</p>
 		</div>
+		<div class="xuxian">
+			<p>
+				欢迎观看完整视频↓
+			</p>
+		</div>
+		<hr>
 		<div class="shipin">
-			<video controls="controls" poster="待机.png" webkit-playsinline="true" playsinline="true" muted preload="metadata">
+			<video controls="controls" poster="待机.png" webkit-playsinline="true" playsinline="true" muted
+				preload="metadata">
 				<source src="激素.mp4" type="video/mp4">
 				<source src="激素.ogg" type="video/ogg">
 				<source src="激素.webm" type="video/webm">
 			</video>
 		</div>
-		<br>
+		
 		<div class="zhengwen">
+			<div class="meihua">
+				<span>part.1</span>
+			</div>
 			<p>
 				<span>
 					一、什么是激素？
@@ -151,6 +191,9 @@
 				“激素”分为许多种类型，包括甲状腺素、甲状旁腺激素、肾上腺素、生长激素、性激素等等，当然还有最被我们所熟悉的胰岛素，
 				也是“激素”大家庭中的一份子。其实我们患者平时“害怕”的大多都是糖皮质激素，这是一种作用极为广泛的激素。
 			</p>
+			<div class="meihua">
+				<span>part.2</span>
+			</div>
 			<p>
 				<span>
 					二、什么是糖皮质激素？
@@ -165,6 +208,9 @@
 				除氢化可的松外，药物中的糖皮质激素也多以“XX松”、“XX龙”或“XX松龙”来命名，如泼尼松（龙）、甲泼尼龙、糠酸莫米松、卤米松、地塞米松。当然，也有一些药物没有按照这种方式命名，像是曲安奈德、布地奈德等。这里要对我们的患者强调一下，上述药物虽属同类，
 				但适用情况、作用持续时间与强度、对物质代谢的影响均大不相同，所以相互之间是不可以完全替代的，所以不应自行更换药物，一定要遵从专业医师的指导。
 			</p>
+			<div class="meihua">
+				<span>part.3</span>
+			</div>
 			<p>
 				<span>
 					三、糖皮质激素有什么副作用？
