--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
 		.meihua {
-			background-color: rgb(122, 220, 248);
+			background: repeating-linear-gradient(to right,#a635f6,#76c8f7,hwb(194 60% 9%),#d8f5fa);
 			padding: 0%;
 			text-align: left;
 			text-indent: 10px;
@@ -42,6 +42,7 @@
 
 		.meihua span {
 			color: aliceblue;
+			
 		}
 
 		.xuxian p {
